--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>MyApp</title>
+  <title>BitForum</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <my-app>Loading...</my-app>
+  <root>Loading...</root>
 </body>
 </html>
