进度条，一半

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <root>Loading...</root>
+  <root><progress class="progress progress-striped progress-animated" style="width:80%;height:20px;position:relative; margin-left:10%;margin-top:20%;" value="0" max="100">0%</progress></root>
 </body>
 </html>
