博客主页布局设计

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <root>Loading...</root>
+  <root>
+    <style>
+      root {
+        color: purple;
+      }
+    </style>
+    I'm a purple loading message!
+  </root>
 </body>
 </html>
